--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,6 +49,7 @@ services:
     environment:
       ISSUER: http://localhost:8080/realms/dsrs
       AUDIENCE: dsrs-api
+      ALLOW_INSECURE_LOCAL: "1"
       REDIS_URL: redis://redis:6379/0
     depends_on: [redis]
     ports: ["8003:8000"]
@@ -62,6 +63,7 @@ services:
     environment:
       ISSUER: http://localhost:8080/realms/dsrs
       AUDIENCE: dsrs-api
+      ALLOW_INSECURE_LOCAL: "1"
       DATABASE_URL: postgresql+psycopg://dsrs:dsrs@postgres:5432/dsrs
     depends_on: [postgres]
     ports: ["8004:8000"]
@@ -75,6 +77,7 @@ services:
     environment:
       ISSUER: http://localhost:8080/realms/dsrs
       AUDIENCE: dsrs-api
+      ALLOW_INSECURE_LOCAL: "1"
       MONGO_URL: mongodb://mongo:27017
     depends_on: [mongo]
     ports: ["8005:8000"]
