--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -8,6 +8,10 @@
     "jsx": "preserve",
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
     "resolveJsonModule": true,
     "noEmit": true,
     "strict": true,
