--- a/services/registry/requirements.txt
+++ b/services/registry/requirements.txt
@@ -7,4 +7,8 @@ SQLAlchemy==2.0.32
 psycopg[binary]==3.2.1
 alembic==1.13.2
 prometheus-fastapi-instrumentator==7.0.0
-
+pytest==8.3.2
+pytest-asyncio==0.23.8
+httpx==0.27.0
+pytest-testcontainers==3.0.0
+psycopg[binary]==3.2.1
