--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -82,3 +82,25 @@ services:
     depends_on: [mongo]
     ports: ["8005:8000"]
 
+  kong:
+    image: kong:3.6
+    environment:
+      KONG_DATABASE: "off"
+      KONG_DECLARATIVE_CONFIG: /etc/kong/kong.yml
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_LOG_LEVEL: info
+    volumes:
+      - ./infra/docker/kong/kong.yml:/etc/kong/kong.yml:ro
+    ports:
+      - "8000:8000" # proxy
+      - "8001:8001" # admin api
+    depends_on:
+      - identity
+      - registry
+      - eligibility
+      - payment
+      - analytics
+
