--- a/services/payment/requirements.txt
+++ b/services/payment/requirements.txt
@@ -5,7 +5,14 @@ httpx==0.27.0
 pydantic==2.8.2
 SQLAlchemy==2.0.32
 psycopg[binary]==3.2.1
+aiokafka==0.10.0
+opentelemetry-api==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-instrumentation-fastapi==0.47b0
+opentelemetry-exporter-otlp-proto-http==1.26.0
 pytest==8.3.2
 pytest-asyncio==0.23.8
 httpx==0.27.0
 pytest-testcontainers==3.0.0
+testcontainers[kafka]==4.7.2
+testcontainers[postgresql]==4.7.2
