--- a/services/registry/requirements.txt
+++ b/services/registry/requirements.txt
@@ -7,8 +7,15 @@ SQLAlchemy==2.0.32
 psycopg[binary]==3.2.1
 alembic==1.13.2
 prometheus-fastapi-instrumentator==7.0.0
+aiokafka==0.10.0
+opentelemetry-api==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-instrumentation-fastapi==0.47b0
+opentelemetry-exporter-otlp-proto-http==1.26.0
 pytest==8.3.2
 pytest-asyncio==0.23.8
 httpx==0.27.0
 pytest-testcontainers==3.0.0
+testcontainers[kafka]==4.7.2
+testcontainers[postgresql]==4.7.2
 psycopg[binary]==3.2.1
