--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,19 @@
 version: '3.9'
 services:
+  otel-collector:
+    image: otel/opentelemetry-collector:0.103.1
+    command: ["--config=/etc/otel-collector-config.yaml"]
+    volumes:
+      - ./infra/otel/otel-collector-config.yaml:/etc/otel-collector-config.yaml:ro
+    ports:
+      - "4317:4317"
+      - "4318:4318"
+  prometheus:
+    image: prom/prometheus:v2.54.1
+    volumes:
+      - ./infra/otel/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
   postgres:
     image: postgres:15
     environment:
