--- a/services/eligibility/requirements.txt
+++ b/services/eligibility/requirements.txt
@@ -5,6 +5,7 @@ httpx==0.27.0
 pydantic==2.8.2
 SQLAlchemy==2.0.32
 psycopg[binary]==3.2.1
+prometheus-fastapi-instrumentator==7.0.0
 aiokafka==0.10.0
 opentelemetry-api==1.26.0
 opentelemetry-sdk==1.26.0
