ops(dlq): add Prometheus metrics, health server, and K8s probes to DLQ reprocessor; add sample alert rules and docs; include DLQ job in Prometheus scrape

--- a/infra/k8s/dlq-reprocessor-deployment.yaml
+++ b/infra/k8s/dlq-reprocessor-deployment.yaml
@@ -16,6 +16,20 @@ spec:
         - name: worker
           image: ghcr.io/your-org/dsrs-shared:latest
           command: ["python","-m","services.shared.dsrs_common.dlq_reprocessor"]
+          ports:
+            - containerPort: 8090
+          livenessProbe:
+            httpGet:
+              path: /healthz/liveness
+              port: 8090
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /healthz/readiness
+              port: 8090
+            initialDelaySeconds: 10
+            periodSeconds: 10
           env:
             - name: KAFKA_BROKERS
               valueFrom:
