--- a/services/registry/Dockerfile
+++ b/services/registry/Dockerfile
@@ -1,1 +1,31 @@
-# Delegates to common Dockerfile via compose args
+FROM python:3.11-slim
+
+WORKDIR /app
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy shared dependencies first
+COPY services/shared/ ./services/shared/
+COPY requirements.txt .
+
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy service-specific code
+COPY services/registry/ ./services/registry/
+
+# Set Python path
+ENV PYTHONPATH=/app/services/shared:/app/services/registry:/app
+
+# Expose port
+EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Run the application
+CMD ["python", "-m", "uvicorn", "services.registry.app.main:app", "--host", "0.0.0.0", "--port", "8000"]
