--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "next": "14.2.6",
+    "next-auth": "^4.24.11",
     "react": "18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
@@ -25,4 +28,3 @@
     "typescript": "5.5.4"
   }
 }
-
